<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_gradient">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="22dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_back_return_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/txt_new_account"
                android:textColor="@android:color/white"
                android:textSize="22dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="32dp"
            android:paddingEnd="32dp"
            android:paddingStart="32dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="36dp"
                android:layout_marginTop="36dp"
                android:scaleType="centerInside"
                android:src="@drawable/logo_no_shadow" />

            <EditText
                android:id="@+id/edt_email"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="6dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="@color/color_material_gray_500"
                android:textSize="18dp" />


            <EditText
                android:id="@+id/edt_user_name"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="6dp"
                android:hint="@string/txt_hint_username"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="@color/color_material_gray_500"
                android:textSize="18dp" />


            <EditText
                android:id="@+id/edt_password"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="6dp"
                android:hint="@string/txt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="@color/color_material_gray_500"
                android:textSize="18dp" />


            <EditText
                android:id="@+id/edt_confirm_password"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="6dp"
                android:hint="@string/txt_hint_confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="@color/color_material_gray_500"
                android:textSize="18dp" />


            <com.nemestats.boardgametracker.customViews.LinearLayoutWithScaleOnTouch
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="2dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:background="@drawable/bg_btn_login"
                        android:gravity="center"
                        android:text="@string/txt_sign_up"
                        android:textColor="@android:color/white"
                        android:textSize="24dp"
                        android:textStyle="bold" />

                </android.support.v7.widget.CardView>

            </com.nemestats.boardgametracker.customViews.LinearLayoutWithScaleOnTouch>

            <LinearLayout
                android:id="@+id/btn_return_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center|center_vertical"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_not_the_first_time_here"
                    android:textColor="@android:color/white"
                    android:textSize="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/color_material_gray_200"
                    android:textSize="14dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>