<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_gradient">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textSize="22dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="36dp"
                android:layout_marginTop="36dp"
                android:scaleType="centerInside"
                android:src="@drawable/logo_no_shadow" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_user_name"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="6dp"
                android:hint="@string/txt_hint_username"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="@color/color_material_gray_500"
                android:textSize="18dp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_password"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:drawablePadding="6dp"
                android:hint="@string/txt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="@color/color_material_gray_500"
                android:textSize="20dp" />

            <com.nemestats.boardgametracker.customViews.LinearLayoutWithScaleOnTouch
                android:id="@+id/btn_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:padding="2dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/forgot_password"
                    android:textColor="@color/color_material_gray_400"
                    android:textSize="12dp" />

            </com.nemestats.boardgametracker.customViews.LinearLayoutWithScaleOnTouch>

            <com.nemestats.boardgametracker.customViews.LinearLayoutWithScaleOnTouch
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="2dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:background="@drawable/bg_btn_login"
                        android:gravity="center"
                        android:text="@string/sign_in"
                        android:textColor="@android:color/white"
                        android:textSize="24dp"
                        android:textStyle="bold" />

                </android.support.v7.widget.CardView>

            </com.nemestats.boardgametracker.customViews.LinearLayoutWithScaleOnTouch>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_in_using_your_nemestats_com_account"
                android:textColor="@color/color_material_gray_300"
                android:textSize="12dp" />

            <LinearLayout
                android:id="@+id/btn_go_to_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_first_time_here"
                    android:textColor="@android:color/white"
                    android:textSize="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/txt_sign_up"
                    android:textColor="@color/color_material_gray_200"
                    android:textSize="14dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>