<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_next_prev_container"
    android:layout_gravity="bottom">

    <LinearLayout
        android:id="@+id/btn_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:foreground="@drawable/selector_item_game_definition"
        android:gravity="center_vertical"
        android:padding="6dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_keyboard_arrow_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:textColor="@color/color_fab_blue_normal"
            android:textSize="14dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:foreground="@drawable/selector_item_game_definition"
        android:gravity="center_vertical"
        android:padding="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/next"
            android:textColor="@color/color_fab_blue_normal"
            android:textSize="14dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_keyboard_arrow_right" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_edit_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="12dp"
        android:foreground="@drawable/selector_item_game_definition"
        android:gravity="center_vertical"
        android:padding="6dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/game_notes"
            android:textColor="@color/color_fab_blue_normal"
            android:textSize="14dp"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>