<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_notes"
                android:textColor="@color/color_material_gray_600"
                android:textSize="14dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/edt_game_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_search_games_edit_text"
                android:gravity="center_vertical"
                android:hint="@string/hint_game_notes"
                android:inputType="textCapSentences|textMultiLine"
                android:minHeight="56dp"
                android:padding="8dp"
                android:textColor="@color/color_material_gray_600"
                android:textColorHint="@color/color_material_gray_400"
                android:textSize="16dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/color_material_gray_200" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:foreground="@drawable/selector_item_game_definition"
            android:gravity="end"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/color_fab_blue_normal"
                android:textSize="14dp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>